--- a/MSTestNuget/MSTestNuget.csproj
+++ b/MSTestNuget/MSTestNuget.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B1DC8061-5D3D-43D7-9025-00FB31F54E65}</ProjectGuid>
+    <ProjectGuid>{EA87393D-DF91-443F-A09F-97AEC361F998}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicSpecs.MSTest.Specs</RootNamespace>
-    <AssemblyName>DynamicSpecs.MSTest.Specs</AssemblyName>
+    <RootNamespace>MSTestNuget</RootNamespace>
+    <AssemblyName>MSTestNuget</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -16,7 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -38,28 +38,30 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Autofac.3.3.1\lib\net40\Autofac.dll</HintPath>
+      <HintPath>..\packages\Autofac.3.3.1\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Autofac.Extras.FakeItEasy, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Autofac.Extras.FakeItEasy.3.0.3\lib\net40\Autofac.Extras.FakeItEasy.dll</HintPath>
+      <HintPath>..\packages\Autofac.Extras.FakeItEasy.3.0.3\lib\net40\Autofac.Extras.FakeItEasy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DynamicSpecs.AutoFacItEasy, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamicSpecs.AutoFacItEasy.1.2.0.0\lib\net40\DynamicSpecs.AutoFacItEasy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DynamicSpecs.Core, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamicSpecs.Core.1.2.0.0\lib\portable-net40+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10\DynamicSpecs.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DynamicSpecs.MSTest, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamicSpecs.MSTest.1.2.0.0\lib\net40\DynamicSpecs.MSTest.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FakeItEasy, Version=1.18.0.0, Culture=neutral, PublicKeyToken=eff28e2146d5fd2c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FakeItEasy.1.18.0\lib\net40\FakeItEasy.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FluentAssertions, Version=3.4.1.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FluentAssertions.3.4.1\lib\net45\FluentAssertions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FluentAssertions.Core, Version=3.4.1.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FluentAssertions.3.4.1\lib\net45\FluentAssertions.Core.dll</HintPath>
+      <HintPath>..\packages\FakeItEasy.1.18.0\lib\net40\FakeItEasy.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -74,47 +76,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="BasicFeatures\MockConfigurationIsProvided.cs" />
-    <Compile Include="BasicFeatures\When_a_mock_is_used.cs" />
-    <Compile Include="BasicFeatures\When_a_specification_is_created.cs" />
-    <Compile Include="BasicFeatures\When_specific_type_is_configured.cs" />
-    <Compile Include="BasicFeatures\When_static_class_is_tested.cs" />
-    <Compile Include="BasicFeatures\When_using_support_classes.cs" />
-    <Compile Include="ExampleClasses\DummyClass.cs" />
-    <Compile Include="ExampleClasses\IAmAServiceDummy.cs" />
+    <Compile Include="When_NuGet_works_as_expected.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkflowExtensions\DataProvider.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Configuration.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeGiven.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeSUTCreation.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeTypeRegistration.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeWhen.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataByDefault.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeGiven.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeSUTCreation.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeTypeRegistration.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeWhen.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataByDefault.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_before_given_phase.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_before_SUT_creation.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_before_when_phase.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_for_a_default_step.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_for_each_phase.cs" />
-    <Compile Include="WorkflowExtensions\IProvideData.cs" />
-    <Compile Include="WorkflowExtensions\IRequestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\DynamicSpecs\DynamicSpecs.Core.csproj">
-      <Project>{5f4822a3-81c4-4cde-a802-24b37c6044f5}</Project>
-      <Name>DynamicSpecs.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DynamicSpecs.MSTest\DynamicSpecs.MSTest.csproj">
-      <Project>{c3ad1ddd-a44f-4e39-8582-b9b49b62aedf}</Project>
-      <Name>DynamicSpecs.MSTest</Name>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
