--- a/DynamicSpecs.Core/DynamicSpecs.Core.csproj
+++ b/DynamicSpecs.Core/DynamicSpecs.Core.csproj
@@ -9,6 +9,7 @@
     <Copyright>Copyright © 2018 Hendrik Loesch</Copyright>
     <AssemblyVersion>3.0.0.0</AssemblyVersion>
     <FileVersion>3.0.0.0</FileVersion>
+    <Version>3.0.0</Version>
   </PropertyGroup>
 
 </Project>
