--- a/MigrationBackup/a9621de5/AuofacItEasy/DynamicSpecs.AutoFacItEasy/DynamicSpecs.AutoFacItEasy.csproj
+++ b/MigrationBackup/a9621de5/AuofacItEasy/DynamicSpecs.AutoFacItEasy/DynamicSpecs.AutoFacItEasy.csproj
@@ -4,15 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{715E462A-E277-4587-8764-77BA2365F4F6}</ProjectGuid>
+    <ProjectGuid>{7AA6608F-D651-4998-84A8-7E58838FD0FD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicSpecs.NUnit</RootNamespace>
-    <AssemblyName>DynamicSpecs.NUnit</AssemblyName>
+    <RootNamespace>DynamicSpecs.AutoFacItEasy</RootNamespace>
+    <AssemblyName>DynamicSpecs.AutoFacItEasy</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -35,6 +35,18 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.6.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.6.0\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Autofac.Extras.FakeItEasy, Version=5.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Extras.FakeItEasy.5.0.0\lib\net45\Autofac.Extras.FakeItEasy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FakeItEasy, Version=3.4.2.0, Culture=neutral, PublicKeyToken=eff28e2146d5fd2c, processorArchitecture=MSIL">
+      <HintPath>..\packages\FakeItEasy.3.4.2\lib\net45\FakeItEasy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,31 +56,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Shared.AssemblyInfo.cs">
+    <Compile Include="..\Shared.AssemblyInfo.cs">
       <Link>Properties\Shared.AssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Specifies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecifiesStatically.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\AutoFacItEasy\DynamicSpecs.AutoFacItEasy.csproj">
-      <Project>{7aa6608f-d651-4998-84a8-7e58838fd0fd}</Project>
-      <Name>DynamicSpecs.AutoFacItEasy</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj">
-      <Project>{2ea9d7fd-9ff7-4d44-a983-fb6bd8d960be}</Project>
-      <Name>DynamicSpecs.Core</Name>
-    </ProjectReference>
+    <Compile Include="TypeRegistry.cs" />
+    <Compile Include="TypeStoreFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="DynamicSpecs.NUnit.nuspec" />
+    <None Include="DynamicSpecs.AutoFacItEasy.nuspec" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NUnit">
-      <Version>3.12.0</Version>
-    </PackageReference>
+    <ProjectReference Include="..\DynamicSpecs.Core\DynamicSpecs.Core.csproj">
+      <Project>{2ea9d7fd-9ff7-4d44-a983-fb6bd8d960be}</Project>
+      <Name>DynamicSpecs.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
